--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#233067</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorIndigo">#233067</color>
+    <color name="colorRed">#FF0000</color>
 </resources>
