--- a/app/src/main/res/layout/content_settings_horizontal.xml
+++ b/app/src/main/res/layout/content_settings_horizontal.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingTop="100dp"
+    android:paddingTop="90dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="20dp"
     tools:context=".SettingsActivity"
     tools:showIn="@layout/activity_settings_horizontal">
 
