--- a/app/src/main/res/layout/content_settings_horizontal.xml
+++ b/app/src/main/res/layout/content_settings_horizontal.xml
@@ -11,19 +11,34 @@
     tools:context=".SettingsActivity"
     tools:showIn="@layout/activity_settings_horizontal">
 
-    <Button
-        android:id="@+id/en_locale_button"
-        style="@style/Widget.AppCompat.Button.Colored"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/en_locale" />
-    <Button
-        android:id="@+id/ru_locale_button"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:gravity="center"
+        android:text="@string/select_locale_label" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/ru_locale" />
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/en_locale_button"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="@string/en_locale" />
+        <Button
+            android:id="@+id/ru_locale_button"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:text="@string/ru_locale" />
+    </LinearLayout>
 
 </LinearLayout>
