--- a/app/src/main/res/layout/activity_main_horizontal.xml
+++ b/app/src/main/res/layout/activity_main_horizontal.xml
@@ -29,7 +29,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_edit"
-        app:backgroundTint="@color/colorRed"
-        />
+        app:backgroundTint="@color/colorIndigo" />
 
 </FrameLayout>
