--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -10,4 +10,4 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ChatActivity"
-    tools:listitem="@layout/chat_system_message" />
+    tools:listitem="@layout/chat_message" />
