--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TextInputLayoutAppearance" parent="Widget.Design.TextInputLayout">
+        <item name="android:textColor">@color/colorIndigo</item>
+        <item name="android:colorControlNormal">@color/colorIndigo</item>
+        <item name="android:colorControlActivated">@color/colorIndigo</item>
+        <item name="android:colorControlHighlight">@color/colorIndigo</item>
+    </style>
 </resources>
