--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -31,6 +31,14 @@
         <include layout="@layout/item_list" />
     </FrameLayout>
 
+    <ProgressBar
+        android:id="@+id/animated_loader"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/colorIndigo"
+        android:visibility="invisible" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
