--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context=".LoginActivity"
     tools:showIn="@layout/activity_login">
 
     <LinearLayout
         android:id="@+id/login_form_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="-3dp"
-        tools:layout_editor_absoluteY="254dp">
+        android:layout_height="400dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:id="@+id/animated_loader"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/colorIndigo"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/invalid_creds_error_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/colorWhite"
+            android:background="@color/colorRed"
+            android:textAlignment="center"
+            android:text="@string/invalid_creds_error_msg"
+            android:visibility="invisible" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="start"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
             android:text="@string/login_label"
             android:textSize="16sp" />
 
@@ -41,7 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorWhite"
-                android:gravity="left"
+                android:gravity="start"
                 android:hint="@string/input_login_hint"
                 android:padding="@dimen/input_message_padding" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -50,6 +72,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="start"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
             android:text="@string/password_label"
             android:textSize="16sp" />
 
@@ -66,14 +91,24 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_input"
+                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorWhite"
-                android:gravity="left"
+                android:gravity="start"
                 android:hint="@string/input_password_hint"
                 android:padding="@dimen/input_message_padding" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/login_button_label"
+            android:background="@color/colorIndigo"
+            android:textColor="@color/colorWhite" />
+
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
