--- a/app/src/main/res/layout/activity_main_horizontal.xml
+++ b/app/src/main/res/layout/activity_main_horizontal.xml
@@ -23,7 +23,7 @@
     <include layout="@layout/content_main_horizontal" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/write_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
